# 11th-echo-rust

./: Cargo.toml  PLAN.md
src/: audio.rs  gemini.rs  hotkey.rs  injector.rs  main.rs  network.rs  pipeline.rs  settings.rs  state.rs
ui/: appwindow.slint
