[package]
name = "eleventh_echo_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI Framework
slint = "1.8"

# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Audio
cpal = "0.15"

# Networking
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
futures-util = "0.3"

# System Integration
tray-icon = "0.14"
global-hotkey = "0.5"
tao = "0.28" # Event loop for tray/hotkeys

# Windows API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Com", 
    "Win32_Media_Audio", # For WASAPI notifications
    "Win32_System_Threading"
] }

# Logging & Error Handling
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
slint-build = "1.8"
